styling navbar for mobiles

--- a/css/style.css
+++ b/css/style.css
@@ -298,5 +298,26 @@ h1{
 
      /*RESPONSIVE STYLING FOR MOBILE PORT RESOLUTION (425x662px)*/
      
+     @media screen and (max-width: 426px) {
+
+        .navbar{
+            height: 4rem;
+            width: 100%;
+            justify-content: left;
+            position: fixed;
+        }
+
+        #headLogo{
+            width: 4rem;
+            height: 4rem;
+            margin-left: 0;
+        }
+        .navbar #sections{
+            font-size: .9rem;
+            width: 80%;
+            margin: 0;
+
+        }
+     }
 
 }
