--- a/css/style.css
+++ b/css/style.css
@@ -300,11 +300,11 @@ h1{
      
      @media screen and (max-width: 426px) {
 
+
         .navbar{
             height: 4rem;
-            width: 100%;
+            width: inherit;
             justify-content: left;
-            position: fixed;
         }
 
         #headLogo{
@@ -316,8 +316,29 @@ h1{
             font-size: .9rem;
             width: 80%;
             margin: 0;
-
         }
+        #banner{
+            display: none;
+        }
+        #header{
+            width: 100%;
+            margin-top: 4rem;
+        }
+        #links{
+            flex-flow: column;
+            margin-bottom: 1rem;
+        }
+        #projectList ul li{
+            font-size: 1;
+        }
+        .logos{
+            width: 100%;
+            flex-flow: wrap;
+        }
+        .skillLogo{
+            margin: 10px;
+        }
+
      }
 
 }
