--- a/css/contact-style.css
+++ b/css/contact-style.css
@@ -11,7 +11,8 @@ body{
     font-weight: bold;
     width: 60%;
     align-items: center;
-    justify-content: right;
+    justify-content: space-between;
+    margin: 0;
 }
 
 li{
@@ -40,6 +41,40 @@ li{
     border-bottom: solid 2px #ACABA9;
     margin-top: 0px;
 }
+
+.dropdown{
+    padding: 20px;
+    text-align: end;
+}
+
+.dropdown:hover{
+    cursor: pointer;
+}
+
+#select:hover{
+    text-decoration: none;
+}
+.menu {
+    position: absolute;
+    list-style: none;
+    padding-left: 0;
+    padding-right: 2rem;
+    border: solid 1px rgb(50, 119, 247);
+    border-radius: 5px;
+    background-color:rgb(50, 119, 247);
+    color: white;
+    visibility: hidden;
+    margin: 0;
+    padding: 10px;
+}
+
+.menu li{
+    display: block;
+    text-align: left;
+    margin-left: 0;
+    padding: 7px;
+    font-weight: 50;
+}
 a{
   color: black;
   text-decoration: none;  
@@ -54,6 +89,12 @@ a:hover{
     border: solid 1px black;
     padding: 5px;
     border-radius: 7px;
+}
+
+#contact:hover{
+    background-color: black;
+    color: white;
+    text-decoration: none;
 }
 
 .mainPage{
